--- a/src/gcweb/appTop.ejs
+++ b/src/gcweb/appTop.ejs
@@ -26,7 +26,7 @@
 </nav>
 <%_ if (pr.infoBanner != null) { -%>
     <header aria-label="<^- msg('Information Banner') ^>">
-        <section class="bg-info" aria-label="<^- msg('Information') ^>">
+        <section class="bg-info">
             <div class="container">
                 <%_ if (pr.infoBanner.mainHTML != null) { -%>
                     <p class="cdts-banner-text"><%- pr.infoBanner.mainHTML %></p>
@@ -50,8 +50,8 @@
     <div id="wb-bnr" class="container">
         <div class="row">
             <%_ if (pr.lngLinks != null) { -%>
-                <section id="wb-lng" class="col-xs-3 col-sm-12 pull-right text-right" aria-labelledby="cdts-languageSelection">
-                    <h2 class="wb-inv" id="cdts-languageSelection"><^- msg('Language selection') ^></h2>
+                <section id="wb-lng" class="col-xs-3 col-sm-12 pull-right text-right">
+                    <h2 class="wb-inv"><^- msg('Language selection') ^></h2>
                     <ul class="list-inline mrgn-bttm-0">
                         <%_ for (var linkIndex=0; linkIndex<pr.lngLinks.length; linkIndex++) {
                             const link=pr.lngLinks[linkIndex];-%>
@@ -74,8 +74,8 @@
             </div>
             <%_ if (pr.customSearch != null && pr.customSearch.length > 0) {
                 const item=pr.customSearch[0]; -%>
-                <section id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4 visible-md visible-lg" aria-labelledby="cdts-topSearch">
-                    <h2 id="cdts-topSearch"><^- msg('Search') ^><%= item.placeholder != null? ' ' + item.placeholder: '' %></h2>
+                <section id="wb-srch" class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-12 col-sm-5 col-md-4 visible-md visible-lg">
+                    <h2><^- msg('Search') ^><%= item.placeholder != null? ' ' + item.placeholder: '' %></h2>
                     <form action="<%= item.action %>" method="<%= item.method %>" name="cse-search-box" role="search" aria-label="<^- msg('Search Criteria') ^>">
                         <div class="form-group wb-srch-qry">
                             <label for="<%= item.id != null? item.id: 'wb-srch-q' %>" class="wb-inv"><^- msg('Search') ^><%= item.placeholder != null? ' ' + item.placeholder: '' %></label>
@@ -99,11 +99,11 @@
         <div class="container">
             <div class="row">
                 <%_ if (pr.appSettings != null || pr.signOut != null || pr.signIn != null) { -%>
-                    <section class="col-xs-12 col-sm-7" aria-label="<^- msg('Application') ^>">
+                    <section class="col-xs-12 col-sm-7">
                 <%_ } else if (pr.headerMenu != null) { -%>
-                    <section class="col-xs-12 col-sm-9 cdts-app-title-menu" aria-label="<^- msg('Application') ^>">
+                    <section class="col-xs-12 col-sm-9 cdts-app-title-menu">
                 <%_ } else { -%>
-                    <section class="col-xs-12" aria-label="<^- msg('Application') ^>">
+                    <section class="col-xs-12">
                 <%_ } -%>
                 <%_ if (pr.appName != null && pr.appName.length > 0) {
                     const item=pr.appName[0]; -%>
@@ -138,7 +138,7 @@
                     </nav>
                 <%_ } -%>
                 <%_ if (pr.appSettings != null || pr.signOut != null || pr.signIn != null) { -%>
-                <%#using aria-label instead of aria-labelledby because the VALUE of the label must be unique and we already have another search, we're adding a period to make it unique-%>
+                <%#using aria-label instead of aria-labelledby because the VALUE of the label must be unique and we already have another Account menu, we're adding a period to make it unique-%>
                     <nav class="col-sm-5 hidden-xs hidden-print" aria-label="<^- msg('Account menu') ^>.">
                         <h2 class="wb-inv" id="cdts-hiddenAccountMenu"><^- msg('Account menu') ^></h2>
                         <ul class="app-list-account list-unstyled">
@@ -174,10 +174,10 @@
                     </ul>
                     <div id="mb-pnl"></div>
                     <%_ if (pr.customSearch != null && pr.customSearch.length > 0) {
-                        const item=pr.customSearch[0]; -%><%#using aria-label instead of aria-labelledby because the VALUE of the label must be unique and we already have another search, we're adding a period to make it unique-%>
-                        <section id="app-srch-mb" class="wb-overlay modal-content overlay-def wb-bar-t" aria-label="<^- msg('Search') ^><%= item.placeholder != null? ' ' + item.placeholder: '' %>.">
+                        const item=pr.customSearch[0]; -%>
+                        <section id="app-srch-mb" class="wb-overlay modal-content overlay-def wb-bar-t">
                             <div class="modal-header">
-                                <h3 class="modal-title" id="cdts-appSearch"><^- msg('Search') ^><%= item.placeholder != null? ' ' + item.placeholder: '' %></h3>
+                                <h3 class="modal-title"><^- msg('Search') ^><%= item.placeholder != null? ' ' + item.placeholder: '' %></h3>
                             </div>
                             <div class="modal-body">
                                 <form action="<%= item.action %>" method="<%= item.method %>" name="cse-search-box" role="search" class="form-inline" aria-label="<^- msg('Search Criteria') ^>.">
