--- a/src/gcweb/footer.ejs
+++ b/src/gcweb/footer.ejs
@@ -30,8 +30,8 @@
     <%_ if (pr.showFooter != false && pr.hideFooterMain != true) { -%>
         <div id="transactFooter" class="gc-main-footer">
             <div class="container">
-                <nav aria-labelledby="transactGcweb">
-                    <h3 id="transactGcweb"><^- msg('Government of Canada') ^></h3>
+                <nav aria-labelledby="cdts-transactGcweb">
+                    <h3 id="cdts-transactGcweb"><^- msg('Government of Canada') ^></h3>
                     <ul class="list-col-xs-1 list-col-sm-2 list-col-md-3">
                         <%_ if (pr.contactLinks != null && pr.contactLinks.length > 0) {
                             const link=pr.contactLinks[0]; -%>
@@ -69,8 +69,8 @@
     <%_ } -%>
     <div class="gc-sub-footer">
         <div class="container d-flex align-items-center">
-            <nav aria-labelledby="aboutGcweb">
-                <h3 class="wb-inv" id="aboutGcweb"><^- msg('Government of Canada Corporate') ^></h3>
+            <nav aria-labelledby="cdts-aboutGcweb">
+                <h3 class="wb-inv" id="cdts-aboutGcweb"><^- msg('Government of Canada Corporate') ^></h3>
                 <%_ if (pr.showFooter != false) { -%>
                     <ul>
                         <%_ if (pr.hideFooterCorporate != true) { -%>
