fixes code based on latest comments

--- a/src/gcweb/top.ejs
+++ b/src/gcweb/top.ejs
@@ -110,8 +110,8 @@
         <div class="transactBar"></div>
     <%_ } -%>
     <%_ if (pr.breadcrumbs != false) { -%>
-        <nav id="wb-bc" property="breadcrumb" aria-labelledby="cdts-breadcrumbPosition">
-            <h2 id="cdts-breadcrumbPosition"><^- msg('You are here:') ^></h2>
+        <nav id="wb-bc" property="breadcrumb" aria-labelledby="breadcrumbPosition">
+            <h2 id="breadcrumbPosition"><^- msg('You are here:') ^></h2>
             <div class="container">
                 <ol class="breadcrumb">
                     <%_ if (pr.breadcrumbs != null) { -%>
