--- a/src/gcweb/appTop.ejs
+++ b/src/gcweb/appTop.ejs
@@ -257,8 +257,8 @@
         <%_ } -%>
     <%_ } -%>
     <%_ if (pr.breadcrumbs != null) { -%>
-        <nav id="wb-bc" property="breadcrumb" aria-labelledby="cdts-breadcrumbPosition">
-            <h2 id="cdts-breadcrumbPosition"><^- msg('You are here:') ^></h2>
+        <nav id="wb-bc" property="breadcrumb" aria-labelledby="breadcrumbPosition">
+            <h2 id="breadcrumbPosition"><^- msg('You are here:') ^></h2>
             <div class="container">
                 <ol class="breadcrumb">
                     <%_ for (var breadcrumbIndex=0; breadcrumbIndex<pr.breadcrumbs.length; breadcrumbIndex++) {
