--- a/src/gcintranet/footer.ejs
+++ b/src/gcintranet/footer.ejs
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-8">
-                    <a href="<^- msg('https://www.canada.ca/en.html') ^>"><img src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/<^- msg('sig-blk-en.svg') ^>" alt=""><span class="wb-inv"><^- msg('Government of Canada') ^></span></a>
+                    <a href="<^- msg('https://www.canada.ca/en.html') ^>"><img src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/<^- msg('sig-blk-en.svg') ^>" alt="<^- msg('Government of Canada') ^>"></a>
                 </div>
                 <div class="col-xs-6 visible-sm visible-xs tofpg">
                     <a href="#wb-cont"><^- msg('Top of Page') ^><span class="glyphicon glyphicon-chevron-up"></span></a>
