--- a/public/gcweb/cdtsapps.css
+++ b/public/gcweb/cdtsapps.css
@@ -364,4 +364,8 @@
 	}
 }
 
+.wb-disable #wb-sm .menu.cdts-background-initial {
+	background: #E1E4E7
+}
+
 /***** **** *** ** * | END OF THE CSS FOR THE NEW APP TOP 2017-08-29 | * ** *** **** *****/
