--- a/src/gcweb/appTop.ejs
+++ b/src/gcweb/appTop.ejs
@@ -227,7 +227,7 @@
                 <div class="pnl-strt container nvbar">
                     <h2 class="wb-inv" id="appNavMenu"><^- msg('Main navigation menu') ^></h2>
                     <div class="row">
-                        <ul class="list-inline menu" role="menubar">
+                        <ul class="list-inline menu cdts-background-initial" role="menubar">
                             <%_ for (var menuLinkIndex=0; menuLinkIndex<pr.menuLinks.length; menuLinkIndex++) {
                                 const link=pr.menuLinks[menuLinkIndex]; -%>
                                 <%_ if (link.subLinks != null) { -%>
