--- a/src/gcintranet/appFooter.ejs
+++ b/src/gcintranet/appFooter.ejs
@@ -53,7 +53,7 @@
                             <li><a href="<^- msg('https://esdc.prv/en/news/index.shtml') ^>"><^- msg('News') ^></a></li>
                             <li><a href="<^- msg('https://esdc.prv/en/feedback/index.shtml') ^>"><^- msg('Contact and Feedback') ^></a></li>
                             <li><a href="<^- msg('https://esdc.prv/en/stay_connected/index.shtml') ^>"><^- msg('Stay Connected') ^></a></li>
-                            <li><a href="<^- msg('https://edsc.prv/en/help.shtml') ^>"><^- msg('Help and Important Notices') ^></a></li>
+                            <li><a href="<^- msg('https://esdc.prv/en/terms_conditions.shtml') ^>"><^- msg('Terms and Conditions') ^></a></li>
                         </ul>
                     </section>
                 <%_ } else if (pr.subTheme == 'eccc') { -%>
@@ -82,21 +82,21 @@
             </ul>
         </nav>
     <%_ } else if (pr.subTheme == 'esdc' || pr.subTheme == 'labour') { -%>
-        <nav role="navigation" class="container visible-sm visible-md visible-lg wb-navcurr" data-wb-ajax='{"url": "<%- (pr.footerPath != null)? pr.footerPath: wet.builder.environmentHost(pr.cdnEnv) + 'app/cls/WET/global/<^- msg('esdcfooter-eng.html') ^>'%>", "type": "replace", "nocache": true}'></nav>
+        <nav role="navigation" class="container visible-xs visible-sm visible-md visible-lg wb-navcurr" data-wb-ajax='{"url": "<%- (pr.footerPath != null)? pr.footerPath: wet.builder.environmentHost(pr.cdnEnv) + 'app/cls/WET/global/<^- msg('esdcfooter-eng.html') ^>'%>", "type": "replace", "nocache": true}'></nav>
     <%_ } -%>
     <div class="brand">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-md-8">
-                    <a href="<^- msg('https://www.canada.ca/en.html') ^>"><img src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/<^- msg('sig-blk-en.svg') ^>" alt="<^- msg('Government of Canada') ^>"></a>
+                <div class="col-xs-8 col-md-8">
+                    <a href="<^- msg('https://www.canada.ca/en.html') ^>"><img src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/<^- msg('sig-blk-en.svg') ^>" alt="<^- msg('Government of Canada') ^>" class="img-responsive"></a>
                 </div>
-                <div class="col-xs-6 visible-sm visible-xs tofpg">
+                <div class="col-xs-4 col-md-4 text-right">
+                    <img src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/wmms-blk.svg" alt="<^- msg('Symbol of the Government of Canada') ^>" class="img-responsive pull-right">
+                </div>
+                <div class="col-xs-12 visible-sm visible-xs tofpg">
                     <a href="#wb-cont"><^- msg('Top of Page') ^><span class="glyphicon glyphicon-chevron-up"></span></a>
                 </div>
-                <div class="col-xs-6 col-md-4 text-right">
-                    <img src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/wmms-blk.svg" alt="<^- msg('Symbol of the Government of Canada') ^>">
-                </div>
             </div>
-        </div>
+        </div>  
     </div>
 </footer>
