--- a/src/gcintranet/footer.ejs
+++ b/src/gcintranet/footer.ejs
@@ -31,14 +31,14 @@
     <div class="brand">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-md-8">
-                    <a href="<^- msg('https://www.canada.ca/en.html') ^>"><img src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/<^- msg('sig-blk-en.svg') ^>" alt="<^- msg('Government of Canada') ^>"></a>
+                <div class="col-xs-8 col-md-8">
+                    <a href="<^- msg('https://www.canada.ca/en.html') ^>"><img src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/<^- msg('sig-blk-en.svg') ^>" alt="<^- msg('Government of Canada') ^>" class="img-responsive"></a>
                 </div>
-                <div class="col-xs-6 visible-sm visible-xs tofpg">
+                <div class="col-xs-4 col-md-4 text-right">
+                    <img src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/wmms-blk.svg" alt="<^- msg('Symbol of the Government of Canada') ^>" class="img-responsive pull-right">
+                </div>
+                <div class="col-xs-12 visible-sm visible-xs tofpg">
                     <a href="#wb-cont"><^- msg('Top of Page') ^><span class="glyphicon glyphicon-chevron-up"></span></a>
-                </div>
-                <div class="col-xs-6 col-md-4 text-right">
-                    <img src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/wmms-blk.svg" alt="<^- msg('Symbol of the Government of Canada') ^>">
                 </div>
             </div>
         </div>
