Fixing footer for mobile

--- a/src/gcintranet/footer.ejs
+++ b/src/gcintranet/footer.ejs
@@ -9,7 +9,7 @@
 <%_ } -%>
 <footer role="contentinfo" id="wb-info">
     <%_ if (pr.footerPath != null) { -%>
-        <nav role="navigation" class="container visible-sm visible-md visible-lg wb-navcurr" data-wb-ajax='{"url": "<%- pr.footerPath %>", "type": "replace", "nocache": true}'></nav>
+        <nav role="navigation" class="container visible-xs visible-sm visible-md visible-lg wb-navcurr" data-wb-ajax='{"url": "<%- pr.footerPath %>", "type": "replace", "nocache": true}'></nav>
     <%_ } else  { -%>
         <nav role="navigation" class="container wb-navcurr">
             <h2 class="wb-inv"><^- msg('About government') ^></h2>
