Fixing broken links

--- a/src/gcintranet/appFooter.ejs
+++ b/src/gcintranet/appFooter.ejs
@@ -53,7 +53,7 @@
                             <li><a href="<^- msg('https://esdc.prv/en/news/index.shtml') ^>"><^- msg('News') ^></a></li>
                             <li><a href="<^- msg('https://esdc.prv/en/feedback/index.shtml') ^>"><^- msg('Contact and Feedback') ^></a></li>
                             <li><a href="<^- msg('https://esdc.prv/en/stay_connected/index.shtml') ^>"><^- msg('Stay Connected') ^></a></li>
-                            <li><a href="<^- msg('https://esdc.prv/en/terms_conditions.shtml') ^>"><^- msg('Terms and Conditions') ^></a></li>
+                            <li><a href="<^- msg('https://esdc.prv/en/terms-conditions.shtml') ^>"><^- msg('Terms and Conditions') ^></a></li>
                         </ul>
                     </section>
                 <%_ } else if (pr.subTheme == 'eccc') { -%>
