--- a/src/gcweb/footer.ejs
+++ b/src/gcweb/footer.ejs
@@ -57,11 +57,12 @@
                         <li><a href="<^- msg('https://www.canada.ca/en/services/policing.html') ^>"><^- msg('Policing, justice and emergencies') ^></a></li>
                         <li><a href="<^- msg('https://www.canada.ca/en/services/transport.html') ^>"><^- msg('Transport and infrastructure') ^></a></li>
                         <li><a href="<^- msg('https://international.gc.ca/world-monde/index.aspx?lang=eng') ^>"><^- msg('Canada and the world') ^></a></li>
-                        <li><a href="<^- msg('https://www.canada.ca/en/services/finance.html') ^>"><^- msg('Money and finance') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/finance.html') ^>"><^- msg('Money and finances') ^></a></li>
                         <li><a href="<^- msg('https://www.canada.ca/en/services/science.html') ^>"><^- msg('Science and innovation') ^></a></li>
-                        <li><a href="<^- msg('https://www.canada.ca/en/services/indigenous-peoples.html') ^>"><^- msg('Indigenous peoples') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/indigenous-peoples.html') ^>"><^- msg('Indigenous Peoples') ^></a></li>
                         <li><a href="<^- msg('https://www.canada.ca/en/services/veterans-military.html') ^>"><^- msg('Veterans and military') ^></a></li>
                         <li><a href="<^- msg('https://www.canada.ca/en/services/youth.html') ^>"><^- msg('Youth') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/life-events.html') ^>"><^- msg('Manage life events') ^></a></li>
                     </ul>
                 </nav>
             </div>
